Bug 498078 - Drag Handle Size are always displayed as small on new launches of Konsole
Summary: Drag Handle Size are always displayed as small on new launches of Konsole
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: split-view (other bugs)
Version First Reported In: master
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-12-31 09:56 UTC by Filip
Modified: 2025-02-25 13:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
showcase (2.65 MB, video/mp4)
2024-12-31 09:56 UTC, Filip
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Filip 2024-12-31 09:56:03 UTC
Created attachment 176987 [details]
showcase

SUMMARY
Drag Handle Size are always displayed as small on new launches of Konsole.

Even in the currently opened Konsole they don't work after changing the settings. Existing handles do change the size, but it looks like only the next split will have the desired size, and all the rest will be small

STEPS TO REPRODUCE
1. Open Configure Konsole window
2. Go to Tab Bar / Splitters
3. Set Drag Handle Size to Medium or Large
4. Save and close Konsole
5. Open Konsole and make a split -> Handles are displayed as small (setting still says large)

OBSERVED RESULT
Drag Handle Size are always displayed as small on new launches of Konsole

EXPECTED RESULT
Drag Handle Size are displayed as they are set in the settings on new launches of Konsole

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.2.4
KDE Frameworks Version: 6.9.0
Qt Version: 6.8.1
Kernel Version: 6.12.7-arch1-1 (64-bit)
Graphics Platform: Wayland
Comment 1 Bug Janitor Service 2025-02-22 20:59:49 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/1068
Comment 2 tcanabrava 2025-02-24 11:25:58 UTC
Git commit 5b0fe4073046e551e570c3cb46308065b1cea44c by Tomaz  Canabrava, on behalf of Kurt Hindenburg.
Committed on 24/02/2025 at 10:54.
Pushed by tcanabrava into branch 'master'.

Call setHandleWidth() to set initial size for splitDragHandleSize

There was only a connect on change, no initial setting.

M  +1    -0    src/widgets/ViewSplitter.cpp

https://invent.kde.org/utilities/konsole/-/commit/5b0fe4073046e551e570c3cb46308065b1cea44c
Comment 3 Kurt Hindenburg 2025-02-25 13:27:53 UTC
Git commit 922ee84676d6234aa059e2c293175dba6be3bb93 by Kurt Hindenburg, on behalf of Kurt Hindenburg.
Committed on 25/02/2025 at 13:27.
Pushed by hindenburg into branch 'release/24.12'.

Call setHandleWidth() to set initial size for splitDragHandleSize

There was only a connect on change, no initial setting.
(cherry picked from commit 5b0fe4073046e551e570c3cb46308065b1cea44c)

M  +1    -0    src/widgets/ViewSplitter.cpp

https://invent.kde.org/utilities/konsole/-/commit/922ee84676d6234aa059e2c293175dba6be3bb93