Call setHandleWidth() to set initial size for splitDragHandleSize

There was only a connect on change, no initial setting.

BUG: 498078